# framework-fl-testing

./: .dockerignore  .gitignore  Dockerfile.client  Dockerfile.server  Makefile  Pipfile  README.md  client.env  common.env  docker-compose copy.yaml  docker-compose.yaml  pyproject.toml  pyvenv.cfg  server.env
client/: client.conf  pyproject.toml  run.sh
client/src/: client.py  clients.py  dataset.py  main.py  model.py  result.py  storage.py
code/client/: client.py  cnn.py  main.py  model.py
code/server/: server.py
config/local/: client.conf  server.conf
dataset/: generate_cifar10.py  generate_cifar100.py  generate_fmnist.py  generate_mnist.py  pyproject.toml
dataset/utils/: HAR_utils.py  dataset_utils.py
diagrams/: Conceptual.drawio  client_repo (1).drawio  directory.drawio  experiment_directory.drawio  flowchart.drawio  server_repo.drawio  solution.drawio
docker/apache-superset/: Dockerfile  entrypoint.sh
docker/client/: Dockerfile  requirements.txt
docker/server/: Dockerfile  requirements.txt
docs/: architecture.md
experiments/: config.json
experiments/test/: config.json
graphs/: graficos.pbix  graficos.xlsx
images/: Grafana_logo.svg.png:Zone.Identifier  Prometheus.webp:Zone.Identifier  Python-logo-notext.svg.png:Zone.Identifier  Ubuntu-logo-2022.svg.png:Zone.Identifier  cifar-100-dataset.jpg:Zone.Identifier  diagram-pvc-pv.png:Zone.Identifier  fashion-mnist-sprite.png:Zone.Identifier  flower-logo.png:Zone.Identifier  images.png:Zone.Identifier  python-symbol.png:Zone.Identifier  test.jpg:Zone.Identifier
kubernetes/: DEBUG.YML
server/: pyproject.toml  server.conf
server/src/: break.py  dataset.py  main.py  model.py  storage.py  strategies.py
server/tests/: storage.py
src/server/: pyproject.toml  run.sh  storage.py  strategies.py
(+66 files in other folders)
