[tool.poetry]
name = "framework-fl-testing"
version = "0.1.0"
description = ""
authors = ["fschwanck <fschwanck@gmail.com>"]
readme = "README.md"
packages = [{include = "framework_fl_testing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
flower = "^1.2.0"
tensorflow = "^2.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
