[tool.poetry]
name = "framework-fl-testing"
version = "0.1.0"
description = ""
authors = ["fschwanck <fschwanck@gmail.com>"]
readme = "README.md"
packages = [{include = "framework_fl_testing"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tensorflow = "^2.11.0"
pytest = "^7.2.1"
flwr = "^1.3.0"
torch = "^1.13.1"
torchvision = "^0.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
